--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -103,6 +103,377 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
+                <RelativeLayout
+                    android:layout_width="@dimen/dp_280"
+                    android:layout_height="match_parent">
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="@dimen/dp_58"
+                        android:layout_marginLeft="@dimen/dp_12"
+                        android:layout_marginTop="@dimen/dp_76"
+                        android:orientation="horizontal">
+
+                        <com.facebook.drawee.view.SimpleDraweeView
+                            android:id="@+id/CeSim"
+                            android:layout_width="@dimen/dp_56"
+                            android:layout_height="@dimen/dp_58" />
+
+                        <LinearLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="match_parent"
+                            android:layout_marginLeft="@dimen/dp_10"
+                            android:layout_marginTop="@dimen/dp_10"
+                            android:orientation="horizontal">
+
+                            <LinearLayout
+                                android:layout_width="0dp"
+                                android:layout_height="match_parent"
+                                android:layout_weight="6"
+                                android:orientation="vertical">
+
+                                <TextView
+                                    android:id="@+id/CeName"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+                                    android:text="JUNMSS"
+                                    android:textColor="@android:color/black"
+                                    android:textSize="18sp" />
+
+                                <TextView
+                                    android:id="@+id/CeQianming"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="match_parent"
+                                    android:layout_marginTop="@dimen/dp_10"
+                                    android:text="我是最好的"
+                                    android:textColor="@android:color/black"
+                                    android:textSize="12sp" />
+
+                            </LinearLayout>
+
+                            <LinearLayout
+                                android:orientation="horizontal"
+                                android:layout_width="@dimen/dp_0"
+                                android:layout_height="match_parent"
+                                android:layout_weight="4">
+
+                                <ImageView
+                                    android:id="@+id/CeHuiYuan"
+                                    android:src="@mipmap/huiyuan"
+                                    android:layout_gravity="center"
+                                    android:layout_width="@dimen/dp_30"
+                                    android:layout_height="@dimen/dp_30" />
+
+                                <LinearLayout
+                                    android:id="@+id/CeQian"
+                                    android:layout_marginRight="@dimen/dp_10"
+                                    android:orientation="vertical"
+                                    android:layout_marginLeft="@dimen/dp_8"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="match_parent">
+
+                                    <ImageView
+                                        android:layout_gravity="center"
+                                        android:src="@mipmap/my_icon_sign_n"
+                                        android:layout_width="wrap_content"
+                                        android:layout_height="wrap_content" />
+
+                                    <TextView
+                                        android:gravity="center"
+                                        android:text="签到 "
+                                        android:layout_width="match_parent"
+                                        android:layout_height="wrap_content" />
+
+                                </LinearLayout>
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:orientation="vertical"
+                        android:background="@drawable/ce_bg"
+                        android:layout_marginTop="@dimen/dp_170"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent">
+
+                        <LinearLayout
+                            android:layout_marginTop="@dimen/dp_16"
+                            android:layout_marginLeft="@dimen/dp_12"
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:id="@+id/CeCollect"
+                                android:orientation="horizontal"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                                <ImageView
+                                    android:src="@mipmap/my_icon_collect_n"
+                                    android:layout_width="@dimen/dp_20"
+                                    android:layout_height="@dimen/dp_20" />
+
+                                <TextView
+                                    android:text="我的收藏"
+                                    android:layout_marginLeft="@dimen/dp_10"
+                                    android:textSize="14sp"
+                                    android:layout_width="@dimen/dp_190"
+                                    android:layout_height="wrap_content" />
+
+                                <ImageView
+                                    android:layout_marginRight="@dimen/dp_20"
+                                    android:src="@mipmap/my_icon_next_n"
+                                    android:layout_width="@dimen/dp_20"
+                                    android:layout_height="@dimen/dp_20" />
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <!-- ************************ -->
+                        <LinearLayout
+                            android:layout_marginTop="@dimen/dp_30"
+                            android:layout_marginLeft="@dimen/dp_12"
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:id="@+id/CeAttention"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:orientation="horizontal">
+
+                                <ImageView
+                                    android:layout_width="@dimen/dp_20"
+                                    android:layout_height="@dimen/dp_20"
+                                    android:src="@mipmap/my_icon_attention_n" />
+
+                                <TextView
+                                    android:layout_width="@dimen/dp_190"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="@dimen/dp_10"
+                                    android:text="我的关注"
+                                    android:textSize="14sp" />
+
+                                <ImageView
+                                    android:layout_width="@dimen/dp_20"
+                                    android:layout_height="@dimen/dp_20"
+                                    android:layout_marginRight="@dimen/dp_20"
+                                    android:src="@mipmap/my_icon_next_n" />
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <!-- ************************ -->
+                        <LinearLayout
+                            android:layout_marginTop="@dimen/dp_30"
+                            android:layout_marginLeft="@dimen/dp_12"
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:id="@+id/CeCard"
+                                android:orientation="horizontal"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                                <ImageView
+                                    android:src="@mipmap/my_icon_card_n"
+                                    android:layout_width="@dimen/dp_20"
+                                    android:layout_height="@dimen/dp_20" />
+
+                                <TextView
+                                    android:text="我的帖子"
+                                    android:layout_marginLeft="@dimen/dp_10"
+                                    android:textSize="14sp"
+                                    android:layout_width="@dimen/dp_190"
+                                    android:layout_height="wrap_content" />
+
+                                <ImageView
+                                    android:layout_marginRight="@dimen/dp_20"
+                                    android:src="@mipmap/my_icon_next_n"
+                                    android:layout_width="@dimen/dp_20"
+                                    android:layout_height="@dimen/dp_20" />
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <!-- ************************ -->
+                        <LinearLayout
+                            android:layout_marginTop="@dimen/dp_30"
+                            android:layout_marginLeft="@dimen/dp_12"
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:id="@+id/CeNotice"
+                                android:orientation="horizontal"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                                <ImageView
+                                    android:src="@mipmap/my_icon_notice_n"
+                                    android:layout_width="@dimen/dp_20"
+                                    android:layout_height="@dimen/dp_20" />
+
+                                <TextView
+                                    android:text="我的通知"
+                                    android:layout_marginLeft="@dimen/dp_10"
+                                    android:textSize="14sp"
+                                    android:layout_width="@dimen/dp_190"
+                                    android:layout_height="wrap_content" />
+
+                                <ImageView
+                                    android:layout_marginRight="@dimen/dp_20"
+                                    android:src="@mipmap/my_icon_next_n"
+                                    android:layout_width="@dimen/dp_20"
+                                    android:layout_height="@dimen/dp_20" />
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <!-- ************************ -->
+                        <LinearLayout
+                            android:layout_marginTop="@dimen/dp_30"
+                            android:layout_marginLeft="@dimen/dp_12"
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:id="@+id/CeJifen"
+                                android:orientation="horizontal"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                                <ImageView
+                                    android:src="@mipmap/my_icon_notice_ni"
+                                    android:layout_width="@dimen/dp_20"
+                                    android:layout_height="@dimen/dp_20" />
+
+                                <TextView
+                                    android:layout_width="@dimen/dp_190"
+                                    android:layout_height="wrap_content"
+                                    android:layout_marginLeft="@dimen/dp_10"
+                                    android:text="我的积分"
+                                    android:textSize="14sp" />
+
+                                <ImageView
+                                    android:layout_marginRight="@dimen/dp_20"
+                                    android:src="@mipmap/my_icon_next_n"
+                                    android:layout_width="@dimen/dp_20"
+                                    android:layout_height="@dimen/dp_20" />
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <!-- ************************ -->
+                        <LinearLayout
+                            android:layout_marginTop="@dimen/dp_30"
+                            android:layout_marginLeft="@dimen/dp_12"
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:id="@+id/CeTask"
+                                android:orientation="horizontal"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                                <ImageView
+                                    android:src="@mipmap/my_icon_task_n"
+                                    android:layout_width="@dimen/dp_20"
+                                    android:layout_height="@dimen/dp_20" />
+
+                                <TextView
+                                    android:text="我的任务"
+                                    android:layout_marginLeft="@dimen/dp_10"
+                                    android:textSize="14sp"
+                                    android:layout_width="@dimen/dp_190"
+                                    android:layout_height="wrap_content" />
+
+                                <ImageView
+                                    android:layout_marginRight="@dimen/dp_20"
+                                    android:src="@mipmap/my_icon_next_n"
+                                    android:layout_width="@dimen/dp_20"
+                                    android:layout_height="@dimen/dp_20" />
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <!-- ************************ -->
+                        <LinearLayout
+                            android:layout_marginTop="@dimen/dp_30"
+                            android:layout_marginLeft="@dimen/dp_12"
+                            android:orientation="vertical"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content">
+
+                            <LinearLayout
+                                android:id="@+id/CeSetting"
+                                android:orientation="horizontal"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content">
+
+                                <ImageView
+                                    android:src="@mipmap/my_icon_setting_n"
+                                    android:layout_width="@dimen/dp_20"
+                                    android:layout_height="@dimen/dp_20" />
+
+                                <TextView
+                                    android:text="设置"
+                                    android:layout_marginLeft="@dimen/dp_10"
+                                    android:textSize="14sp"
+                                    android:layout_width="@dimen/dp_190"
+                                    android:layout_height="wrap_content" />
+
+                                <ImageView
+                                    android:layout_marginRight="@dimen/dp_20"
+                                    android:src="@mipmap/my_icon_next_n"
+                                    android:layout_width="@dimen/dp_20"
+                                    android:layout_height="@dimen/dp_20" />
+
+                            </LinearLayout>
+
+                        </LinearLayout>
+
+                        <!-- ************************ -->
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_alignParentBottom="true"
+                        android:orientation="vertical"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content">
+
+                        <TextView
+                            android:gravity="center"
+                            android:text="八维移动通信学院毕业作品"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content" />
+
+                        <TextView
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/dp_20" />
+
+                    </LinearLayout>
+
+                </RelativeLayout>
+
             </LinearLayout>
 
 
