--- a/app/src/main/res/layout/fragment_message.xml
+++ b/app/src/main/res/layout/fragment_message.xml
@@ -1,12 +1,54 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <RelativeLayout
+        android:background="#f2f2f2"
+        android:orientation="horizontal"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_80">
+        <RadioGroup
+            android:orientation="horizontal"
+            android:layout_centerHorizontal="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/dp_10"
+            android:layout_width="@dimen/dp_188"
+            android:layout_height="@dimen/dp_30"
+            android:background="@drawable/groupshap"
+            >
+            <RadioButton
+                android:gravity="center"
+                android:layout_width="@dimen/dp_94"
+                android:layout_height="@dimen/dp_30"
+                android:button="@null"
+                android:text="消息"
+                android:textSize="@dimen/sp_20"
+                android:background="@drawable/my_selector"
+                />
+            <RadioButton
+                android:gravity="center"
+                android:layout_width="@dimen/dp_94"
+                android:layout_height="@dimen/dp_30"
+                android:button="@null"
+                android:text="联系人"
+                android:textSize="@dimen/sp_20"
+                android:background="@drawable/my_selector"
+               />
+        </RadioGroup>
+        <ImageView
+            android:layout_width="@dimen/dp_24"
+            android:layout_height="@dimen/dp_24"
+            android:src="@drawable/ic_launcher_background"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="@dimen/dp_10"
+            android:layout_marginRight="@dimen/dp_12"
+            />
 
-    <ImageView
-        android:layout_centerInParent="true"
-        android:src="@mipmap/ic_launcher_round"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+    </RelativeLayout>
 
-</RelativeLayout>
+
+</LinearLayout>
+
+
