--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,4 +5,6 @@
     <color name="colorAccent">#D81B60</color>
     <color name="colorwhite">#fff</color>
     <color name="colorbule">#20aff9</color>
+    <color name="cutePink">#f43a68</color>
+    <color name="white">#ffffff</color>>
 </resources>
