--- a/app/src/main/res/layout/fragment_information.xml
+++ b/app/src/main/res/layout/fragment_information.xml
@@ -1,12 +1,82 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
-    <ImageView
-        android:layout_centerInParent="true"
-        android:src="@mipmap/ic_launcher_round"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
-
-</RelativeLayout>
+    <LinearLayout
+        android:layout_marginTop="@dimen/dp_32"
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_80"
+        android:orientation="horizontal">
+          <ImageView
+              android:layout_marginTop="@dimen/dp_32"
+              android:layout_marginLeft="@dimen/dp_12"
+              android:layout_width="@dimen/dp_24"
+              android:layout_height="@dimen/dp_24"
+              android:src="@mipmap/home_nav_btn_menu_n"/>
+        <TextView
+            android:layout_marginTop="@dimen/dp_32"
+            android:layout_marginRight="@dimen/dp_130"
+            android:layout_marginLeft="@dimen/dp_130"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="@dimen/sp_20"
+            android:textColor="#000000"
+            android:text="资讯"/>
+        <ImageView
+            android:id="@+id/search"
+            android:layout_marginTop="@dimen/dp_32"
+            android:layout_marginRight="@dimen/dp_22"
+            android:layout_width="@dimen/dp_24"
+            android:layout_height="@dimen/dp_24"
+            android:src="@mipmap/common_nav_btn_search_n"/>
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/dp_1"
+        android:orientation="horizontal"
+        android:background="#cccccc"></LinearLayout>
+   <ScrollView
+       android:layout_width="match_parent"
+       android:layout_height="match_parent">
+       <LinearLayout
+           android:layout_width="match_parent"
+           android:layout_height="match_parent"
+           android:orientation="vertical">
+           <RelativeLayout
+               android:layout_marginTop="@dimen/dp_20"
+               android:layout_marginBottom="@dimen/dp_20"
+               android:layout_width="match_parent"
+               android:layout_height="@dimen/dp_200">
+               <com.stx.xhb.xbanner.XBanner
+                   app:isClipChildrenMode="true"
+                   android:layout_marginLeft="@dimen/dp_10"
+                   android:layout_marginRight="@dimen/dp_10"
+                   android:layout_width="match_parent"
+                   android:layout_height="@dimen/dp_200"
+                   app:pointsVisibility="false"
+                   android:id="@+id/ban"/>
+               <TextView
+                   android:ellipsize="end"
+                   android:padding="@dimen/dp_20"
+                   android:singleLine="true"
+                   android:layout_alignParentBottom="true"
+                   android:gravity="center"
+                   android:layout_width="match_parent"
+                   android:layout_height="wrap_content"
+                   android:textSize="@dimen/sp_16"
+                   android:textColor="#ffffff"
+                   android:textStyle="bold"
+                   android:layout_marginBottom="@dimen/dp_10"
+                   android:id="@+id/Plate" />
+           </RelativeLayout>
+           <android.support.v7.widget.RecyclerView
+               android:layout_width="match_parent"
+               android:layout_height="wrap_content"
+               android:id="@+id/recyclerView"
+               android:layout_marginBottom="@dimen/dp_50"/>
+       </LinearLayout>
+   </ScrollView>
+</LinearLayout>
