--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,7 @@
     <color name="colorbule">#20aff9</color>
     <color name="cutePink">#f43a68</color>
     <color name="white">#ffffff</color>>
+    <color name="gray">#000000</color>>
+    <color name="red">#000000</color>>
+    <color name="color_bg_notification">#80000000</color>
 </resources>
