--- a/app/src/main/res/layout/findbytitle_view.xml
+++ b/app/src/main/res/layout/findbytitle_view.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activity.WebActivity"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:ignore="MissingDefaultResource">
 
     <TextView
         android:textSize="@dimen/sp_16"
